// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popover/demo/Arrow-point-at-center.js correctly test 1`] = `
<div>
  <button
    class="jc-btn"
    type="button"
  >
    <span>
      Align edge / 边缘对齐
    </span>
  </button>
  <button
    class="jc-btn"
    type="button"
  >
    <span>
      Arrow points to center / 箭头指向中心
    </span>
  </button>
</div>
`;

exports[`renders ./components/popover/demo/Basic.js correctly test 1`] = `
<button
  class="jc-btn jc-btn-primary"
  type="button"
>
  <span>
    Hover me
  </span>
</button>
`;

exports[`renders ./components/popover/demo/Control.js correctly test 1`] = `
<button
  class="jc-btn jc-btn-primary"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders ./components/popover/demo/Placement.js correctly test 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap"
  >
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
  </div>
  <div
    style="width:70px;float:left"
  >
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        LT
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        Left
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        LB
      </span>
    </button>
  </div>
  <div
    style="width:70px;margin-left:304px"
  >
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        RT
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        Right
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        RB
      </span>
    </button>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap"
  >
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <button
      class="jc-btn"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/popover/demo/TriggerType.js correctly test 1`] = `
<div>
  <button
    class="jc-btn"
    type="button"
  >
    <span>
      Hover me
    </span>
  </button>
  <button
    class="jc-btn"
    type="button"
  >
    <span>
      Focus me
    </span>
  </button>
  <button
    class="jc-btn"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</div>
`;
